# cli-suite

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  dist-workspace.toml  final.md
.github/workflows/: ci.yml  release-followup.yml
crates/ax-core/: Cargo.toml
crates/ax-core/src/: lib.rs
crates/ax-fs/: Cargo.toml
crates/ax-fs/src/: lib.rs
crates/ax-git/: Cargo.toml
crates/ax-git/src/: lib.rs
crates/ax-output/: Cargo.toml
crates/ax-output/src/: lib.rs
crates/ax-peek/: Cargo.toml
crates/ax-peek/src/: cli.rs  collect.rs  command.rs  error.rs  main.rs  render.rs
crates/ax-peek/tests/: modes.rs
crates/axt-bundle/: Cargo.toml
crates/axt-bundle/src/: main.rs
crates/axt-bundle/tests/: modes.rs
crates/axt-core/: Cargo.toml
crates/axt-core/src/: lib.rs
crates/axt-ctxpack/: Cargo.toml
crates/axt-ctxpack/src/: app.rs  ast.rs  cli.rs  command.rs  error.rs  model.rs  render.rs
crates/axt-ctxpack/tests/: modes.rs
crates/axt-ctxpack/tests/snapshots/: modes__ctxpack_agent.snap  modes__ctxpack_human.snap  modes__ctxpack_json.snap  modes__ctxpack_json_data.snap  modes__ctxpack_jsonl.snap  modes__ctxpack_plain.snap
crates/axt-doc/: Cargo.toml
crates/axt-doc/src/: cli.rs  command.rs  error.rs  main.rs  model.rs  output.rs  render.rs
crates/axt-doc/tests/: modes.rs
crates/axt-drift/: Cargo.toml
crates/axt-drift/src/: cli.rs  command.rs  error.rs  main.rs  model.rs  output.rs  render.rs  snapshot.rs
crates/axt-drift/tests/: modes.rs
crates/axt-fs/: Cargo.toml
crates/axt-fs/src/: lib.rs
crates/axt-git/: Cargo.toml
crates/axt-git/src/: lib.rs
crates/axt-gitctx/: Cargo.toml
crates/axt-gitctx/src/: app.rs  lib.rs
crates/axt-gitctx/tests/: .modes.rs.pending-snap  modes.rs
crates/axt-logdx/: Cargo.toml
crates/axt-logdx/src/: app.rs  cli.rs  command.rs  error.rs  lib.rs  model.rs  render.rs
crates/axt-logdx/tests/: modes.proptest-regressions  modes.rs
crates/axt-outline/: Cargo.toml
crates/axt-outline/src/: app.rs  cli.rs  command.rs  error.rs  model.rs  render.rs  tree.rs
crates/axt-outline/tests/: modes.rs
crates/axt-output/: Cargo.toml
crates/axt-output/src/: lib.rs
crates/axt-peek/: Cargo.toml
crates/axt-peek/src/: cli.rs  collect.rs  command.rs  error.rs  main.rs  model.rs  render.rs
crates/axt-peek/tests/: modes.rs
crates/axt-port/: Cargo.toml
crates/axt-port/src/: cli.rs  command.rs  discovery.rs  error.rs  main.rs  model.rs  output.rs  render.rs  signal.rs
crates/axt-port/tests/: .modes.rs.pending-snap  modes.rs
crates/axt-port/tests/snapshots/: modes__port_agent_free_dry_run.snap  modes__port_jsonl_free_dry_run.snap
crates/axt-run/: Cargo.toml
crates/axt-run/src/: cli.rs  command.rs  error.rs  execute.rs  fswatch.rs  main.rs  model.rs  output.rs  render.rs  storage.rs
crates/axt-run/tests/: modes.rs
crates/axt-run/tests/snapshots/: modes__run_agent_false.snap  modes__run_human_echo.snap  modes__run_jsonl_echo.snap
crates/axt-slice/: Cargo.toml
crates/axt-slice/src/: app.rs  cli.rs  command.rs  error.rs  main.rs  model.rs  render.rs  tree.rs
crates/axt-slice/tests/: modes.rs
crates/axt-test/: Cargo.toml
crates/axt-test/src/: app.rs  cli.rs  command.rs  discovery.rs  error.rs  frontend.rs  lib.rs  main.rs  model.rs  render.rs
crates/axt-test/tests/: modes.rs
docs/: agent-mode.md  agent-prompts.md  architecture.md  design-principles.md  error-catalog.md  installation.md  production-readiness-audit.md  release.md  security-hardening.md  spec-addendum.md  spec.md
docs/commands/: bundle.md  ctxpack.md  doc.md  drift.md  gitctx.md  logdx.md  outline.md  peek.md  port.md  run.md  slice.md  test.md
docs/evolutive/: axt-ctxpack.md  axt-gitctx.md  axt-impact.md  axt-logdx.md  axt-logsift.md  axt-manifest.md  axt-outline.md  axt-plan.md  axt-repomap.md  axt-slice.md  axt-test-evolution.md  end-to-end-command-prompts.tmp.md  implementation-prompt-template.md  market-analysis.md
docs/man/: axt-bundle.1  axt-ctxpack.1  axt-doc.1  axt-drift.1  axt-gitctx.1  axt-logdx.1  axt-outline.1  axt-peek.1  axt-port.1  axt-run.1  axt-slice.1  axt-test.1
docs/skills/: README.md
docs/skills/axt-bundle/: SKILL.md
docs/skills/axt-ctxpack/: SKILL.md
docs/skills/axt-doc/: SKILL.md
docs/skills/axt-drift/: SKILL.md
docs/skills/axt-gitctx/: SKILL.md
docs/skills/axt-logdx/: SKILL.md
docs/skills/axt-outline/: SKILL.md
docs/skills/axt-peek/: SKILL.md
docs/skills/axt-port/: SKILL.md
docs/skills/axt-run/: SKILL.md
docs/skills/axt-slice/: SKILL.md
docs/status/: M0.md  M1.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md  M8.md  M9.md  RC3.md  W4.md
fixtures/axt-ctxpack/: .hidden.txt
fixtures/axt-outline/: README.md
fixtures/fs-small/: .ignore  README.md  generated.txt  ignored.tmp
fixtures/fs-with-git/: README.md  tracked.txt
fixtures/runs/: change-files.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: axt_gitctx_status.rs  axt_logdx_parser.rs  axt_test_frontend.rs
schemas/: ax.peek.v1.schema.json  axt.bundle.file.v1.schema.json  axt.bundle.git.v1.schema.json  axt.bundle.manifest.v1.schema.json  axt.bundle.summary.v1.schema.json  axt.bundle.v1.schema.json  axt.bundle.warn.v1.schema.json  axt.ctxpack.v1.schema.json  axt.doc.v1.schema.json  axt.drift.v1.schema.json  axt.gitctx.v1.schema.json  axt.logdx.v1.schema.json  axt.outline.v1.schema.json  axt.peek.v1.schema.json  axt.port.action.v1.schema.json  axt.port.holder.v1.schema.json  axt.port.socket.v1.schema.json  axt.port.summary.v1.schema.json  axt.port.v1.schema.json  axt.port.warn.v1.schema.json  axt.run.v1.schema.json  axt.slice.v1.schema.json  axt.test.case.v1.schema.json  axt.test.framework.v1.schema.json  axt.test.suite.v1.schema.json  axt.test.summary.v1.schema.json  axt.test.v1.schema.json  axt.test.warn.v1.schema.json
scripts/: bench-logdx.py  install-local.py
scripts/agent/: install-skills.py
scripts/release/: scoop-manifest.py  test_scoop_manifest.py
tests/smoke/: unix.sh  windows.ps1
xtask/: Cargo.toml
xtask/src/: main.rs
(+50 files in other folders)
