[workspace]
resolver = "2"
members = [
  "crates/axt-core",
  "crates/axt-output",
  "crates/axt-fs",
  "crates/axt-git",
  "crates/axt-peek",
  "crates/axt-run",
  "crates/axt-doc",
  "crates/axt-drift",
  "crates/axt-port",
  "crates/axt-test",
  "xtask",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.82"
repository = "https://github.com/ddurzo/axt"
homepage  = "https://github.com/ddurzo/axt"
authors = ["axt contributors"]
version = "0.1.0-rc1"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anstream = "0.6"
anstyle = "1"
ignore = "0.4"
walkdir = "2"
jwalk = "0.8"
gix = { version = "0.77", default-features = false, features = ["max-performance-safe"] }
blake3 = "1"
content_inspector = "0.2"
infer = "0.16"
mime_guess = "2"
encoding_rs = "0.8"
which = "7"
camino = { version = "1", features = ["serde1"] }
dunce = "1"
pathdiff = "0.2"
rayon = "1"
tempfile = "3"
schemars = "0.8"
jsonschema = "0.18"
globset = "0.4"
libc = "0.2"
windows-sys = "0.59"
sysinfo = { version = "0.32", default-features = false, features = ["system", "user"] }
netstat2 = "0.11"
nix = { version = "0.29", default-features = false, features = ["signal"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }

# tests
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json", "yaml"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
