[package]
name = "axt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
axt-gitctx = { path = "../crates/axt-gitctx" }
axt-logdx = { path = "../crates/axt-logdx" }
axt-test = { path = "../crates/axt-test" }
libfuzzer-sys = "0.4"

[[bin]]
name = "axt_test_frontend"
path = "fuzz_targets/axt_test_frontend.rs"
test = false
doc = false
bench = false

[[bin]]
name = "axt_logdx_parser"
path = "fuzz_targets/axt_logdx_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "axt_gitctx_status"
path = "fuzz_targets/axt_gitctx_status.rs"
test = false
doc = false
bench = false
