[package]
name = "xtask"
description = "Development automation for the axt Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"
