[package]
name = "ax-git"
description = "Internal git helpers for the ax Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
camino.workspace = true
gix = { workspace = true, features = ["status", "revision"] }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
