[package]
name = "ax-output"
description = "Internal output helpers for the ax Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"
