[package]
name = "ax-peek"
description = "Directory and repository snapshot command for the ax Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "ax-peek"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
