[package]
name = "axt-ctxpack"
description = "Multi-pattern context search for the axt Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "axt-ctxpack"
path = "src/main.rs"

[[bin]]
name = "ctxpack"
path = "src/bin/ctxpack.rs"
required-features = ["aliases"]

[features]
default = []
aliases = []

[package.metadata.dist]
dist = true

[dependencies]
axt-core = { package = "axt-core", path = "../axt-core", version = "0.1.0-rc1" }
axt-fs = { package = "axt-fs", path = "../axt-fs", version = "0.1.0-rc1" }
axt-output = { package = "axt-output", path = "../axt-output", version = "0.1.0-rc1" }
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
globset.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
jsonschema.workspace = true
tempfile.workspace = true
