[package]
name = "axt-fs"
description = "Internal filesystem helpers for the axt Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "axt_fs"
path = "src/lib.rs"

[dependencies]
blake3.workspace = true
camino.workspace = true
ignore.workspace = true
encoding_rs.workspace = true
infer.workspace = true
mime_guess.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
