[package]
name = "axt-output"
description = "Internal output helpers for the axt Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "axt_output"
path = "src/lib.rs"

[dependencies]
anstream.workspace = true
anstyle.workspace = true
axt-core = { package = "axt-core", path = "../axt-core", version = "0.1.0-rc1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
