[package]
name = "axt-port"
description = "Local port inspection and reclaim tool for the axt Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "axt-port"
path = "src/main.rs"

[[bin]]
name = "ax-port"
path = "src/bin/ax-port.rs"
required-features = ["aliases"]

[[bin]]
name = "port"
path = "src/bin/port.rs"
required-features = ["aliases"]

[features]
default = []
aliases = []

[package.metadata.dist]
dist = true

[dependencies]
axt-core = { package = "axt-core", path = "../axt-core", version = "0.1.0-rc1" }
axt-output = { package = "axt-output", path = "../axt-output", version = "0.1.0-rc1" }
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
netstat2.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
jsonschema.workspace = true
