[package]
name = "axt-run"
description = "Observable command execution for the axt Foundation CLI Suite."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "axt-run"
path = "src/main.rs"

[[bin]]
name = "run"
path = "src/bin/run.rs"
required-features = ["aliases"]

[features]
default = []
aliases = []

[package.metadata.dist]
dist = true

[dependencies]
axt-core = { package = "axt-core", path = "../axt-core", version = "0.1.0-rc1" }
axt-output = { package = "axt-output", path = "../axt-output", version = "0.1.0-rc1" }
anyhow.workspace = true
blake3.workspace = true
camino.workspace = true
clap.workspace = true
globset.workspace = true
libc.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
walkdir.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
jsonschema.workspace = true
tempfile.workspace = true
